# eds-synthetique

./: .gitignore  CONTRIBUTING.md  README.md  codecov.yml  context.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pyright.yml  ruff.yml
docs/: index.md
src/eds_synthetique/domaine/: passage.py  patient.py
src/eds_synthetique/generation/: generateur.py
src/eds_synthetique/utils/: logging_setup.py
tests/domaine/: test_passage.py  test_patient.py
tests/generation/: test_generateur.py
